# frapper

./: .gitignore  README.md  pyproject.toml  requirements.txt
frapper/: api.py  bot.py  config.json  database.py  listener.py  models.py  parser.py  settings.py  tools.py
