[tool.poetry]
name = "frapper"
version = "0.1.0"
description = "TG Bot for Learning the Polish Language"
authors = ["Raman K. romi4240101@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
numpy = "^1.24.2"
envparse = "^0.2.0"
telethon = "^1.28.5"
pyocr = "^0.8.3"
fastapi = {extras = ["all"], version = "^0.95.1"}
flake8 = "^6.0.0"
pylint = "^2.17.2"
ipython = "^8.12.0"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
